react/react-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: react-app
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: react-app
    spec:
      containers:
        - name: react-app
          imagePullPolicy: Always
          image: registry/react-app:v1.4
          ports:
          - containerPort: 80
            name: http
            protocol: TCP
          resources:
            limits:
              cpu: 500m
              memory: 500M
            requests:
              cpu: 100m
              memory: 100M
      imagePullSecrets:
        - name: secret
