react/react-service.yml
apiVersion: v1
kind: Service
apiVersion: v1
metadata:
  name: react-app
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: react-app
